// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toolbar > renders outlined action buttons 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium chevron_fin4unf css-i4bv87-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          aria-label="Back"
          class=""
          data-mui-internal-clone-element="true"
        >
           
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge backLink_fxaclcu css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium backIcon_f116wd06 enabled_fep5z4h css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test outlined tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary root_f1gmzqw4 css-1e6y48t-MuiButtonBase-root-MuiButton-root"
          id="test outlined id"
          tabindex="0"
          type="button"
        >
          <span>
            test outlined title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders primary action buttons 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium chevron_fin4unf css-i4bv87-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          aria-label="Back"
          class=""
          data-mui-internal-clone-element="true"
        >
           
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge backLink_fxaclcu css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium backIcon_f116wd06 enabled_fep5z4h css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test primary tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 buttonAction_f1olq6uy css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test primary id"
          tabindex="0"
          type="button"
        >
          <span>
            test primary title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders primary action buttons without outline, even if outline is true 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium chevron_fin4unf css-i4bv87-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          aria-label="Back"
          class=""
          data-mui-internal-clone-element="true"
        >
           
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge backLink_fxaclcu css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium backIcon_f116wd06 enabled_fep5z4h css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 buttonAction_f1olq6uy css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test id"
          tabindex="0"
          type="button"
        >
          <span>
            test title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders with two breadcrumbs and two actions 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
        <span
          class="flex_f16jawj4"
          title="test display name2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium chevron_fin4unf css-i4bv87-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path2"
          >
            test display name2
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          aria-label="Back"
          class=""
          data-mui-internal-clone-element="true"
        >
           
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge backLink_fxaclcu css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium backIcon_f116wd06 enabled_fep5z4h css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        />
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test id"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <span>
            test title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        aria-label="test disabled title2"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary Mui-disabled MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
            />
          </svg>
          <span>
            test title2
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without actions and one breadcrumb 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          aria-label="Back"
          class=""
          data-mui-internal-clone-element="true"
        >
           
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge backLink_fxaclcu css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium backIcon_f116wd06 enabled_fep5z4h css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    />
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without actions, one breadcrumb, and a page name 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      >
        <span
          class="flex_f16jawj4"
          title="test display name"
        >
          <a
            class="unstyled_f1ikaigl ellipsis_f15ay66x link_ffs2rnf"
            href="/some/test/path"
          >
            test display name
          </a>
        </span>
      </div>
      <div
        class="flex_f16jawj4"
      >
        <div
          aria-label="Back"
          class=""
          data-mui-internal-clone-element="true"
        >
           
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge backLink_fxaclcu css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium backIcon_f116wd06 enabled_fep5z4h css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    />
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and a component page title 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          <div
            id="myComponent"
          >
            test page title
          </div>
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test id"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <span>
            test title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        aria-label="test disabled title2"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary Mui-disabled MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
            />
          </svg>
          <span>
            test title2
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and a string page title 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test id"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <span>
            test title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        aria-label="test disabled title2"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary Mui-disabled MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
            />
          </svg>
          <span>
            test title2
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and one action 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test id"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <span>
            test title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toolbar > renders without breadcrumbs and two actions 1`] = `
<DocumentFragment>
  <div
    class="root_f1vld0bw topLevelToolbar_faeji1w"
  >
    <div
      style="min-width: 100px;"
    >
      <div
        class="breadcrumbs_farqb1 flex_f16jawj4"
      />
      <div
        class="flex_f16jawj4"
      >
        <span
          class="pageName_fe4yf9p ellipsis_f15ay66x"
          data-testid="page-title"
        >
          test page title
        </span>
      </div>
    </div>
    <div
      class="actions_ffoeey"
    >
      <div
        aria-label="test tooltip"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          id="test id"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="HelpIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
            />
          </svg>
          <span>
            test title
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        aria-label="test disabled title2"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary Mui-disabled MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary root_f1gmzqw4 css-1d3f8j8-MuiButtonBase-root-MuiButton-root"
          disabled=""
          id="test id2"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon_f1ojihnt css-i4bv87-MuiSvgIcon-root"
            data-testid="InfoIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
            />
          </svg>
          <span>
            test title2
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
